--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,6 @@ jobs:
         
         - name: Build the hello-docker Docker image
           run: |
-            docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
-            docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
-            docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
+            docker build . --tag ghcr.io/tvoineibhor/gr-exp:latest
+            docker run ghcr.io/tvoineibhor/gr-exp:latest
+            docker push ghcr.io/tvoineibhor/gr-exp:latest
